--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,11 @@
  */
 
 body {
-  font: 13px/1.4 Helvetica, arial, sans-serif;
-  color: #333;
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #292b2c;
   background-color: #fff;
+  padding: 20px;
 }
